# ECHO

./: .env.example  .gitignore  README.md  build_dxt.sh  client_registry.json  install.sh  installer.py  pyproject.toml
bff/: README.md  app.py  deploy.sh  echo-bff.service  nginx.conf
commands/: echo-recent.md  echo-search.md  echo-status.md  echo-summary.md  echo-transcript.md
dxt/: manifest.json
dxt/server/: launcher.sh  main.py
echo_mcp/: __init__.py  auth.py  cli.py  connector.py  mcp_server.py  registry.py
